--- a/grid+flex/practica grid bolitas/index.html
+++ b/grid+flex/practica grid bolitas/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<title>Grid Layout IV | Welcome</title>
 	</head>
 	<body>
@@ -26,20 +26,20 @@
 					</div>
 					<div class="box box-2"></div>
 					<div class="box box-3">
-						<img src="/images/icon-megaphone.png" alt="" />
+						<img src="images/icon-megaphone.png" alt="" />
 					</div>
 					<div class="box box-4">
-						<img src="/images/icon-bicycle.png" alt="" />
+						<img src="images/icon-bicycle.png" alt="" />
 					</div>
 					<div class="box box-5">
-						<img src="/images/icon-bug.png" alt="" />
+						<img src="images/icon-bug.png" alt="" />
 					</div>
 					<div class="box box-6">
-						<img src="/images/icon-fast-food.png" alt="" />
+						<img src="images/icon-fast-food.png" alt="" />
 					</div>
 					<div class="box box-7"></div>
 					<div class="box box-8">
-						<img src="/images/icon-game-controller.png" alt="" />
+						<img src="images/icon-game-controller.png" alt="" />
 					</div>
 					<div class="box box-9"></div>
 				</div>
